# tomboy

./: .cvsignore  .gitignore  AUTHORS  CONTRIBUTING  COPYING  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  Makefile.include  NEWS  README  README.md  Tomboy-linux.csproj  Tomboy-linux.sln  Tomboy-mac.csproj  Tomboy-mac.sln  Tomboy.csproj  Tomboy.mac.csproj  Tomboy.mac.sln  Tomboy.mdp  Tomboy.mds  Tomboy.sln  UpgradeLog2.htm  autogen.sh  bundle-mac-app.sh  configure.ac  configure.in  default.css  intltool-merge.in  intltool-update.in  postbuild.sh  pot-update.in  prebuild.sh  tomboy.desktop.in  tomboy.doap  tomboy.schemas.in  tomboy.spec.in
Mono.Addins/Mono.Addins/: Makefile.am
Tomboy/: .cvsignore  AbstractAddin.cs  ActionManager.cs  AddinManager.cs  AddinPreferenceFactory.cs  Applet.cs  ApplicationAddin.cs  Contrast.cs  Defines.WIN32.cs  Defines.cs.in  ExportAllApplicationAddin.cs  GConfPreferencesClient.cs  GNOME_TomboyApplet.server.in.in  GNOME_TomboyApplet.xml  GSettingsPreferencesClient.cs  GnomeApplication.cs  GnomeFactory.cs  GnomeSession.cs  Gtk.Extensions.cs  IRemoteControl.cs  JumpListManager.cs  Keybinder.cs  Logger.cs  MacApplication.cs  MacFactory.cs  Makefile.am  NativeApplication.cs  Note.cs  NoteAddin.cs  NoteBuffer.cs  NoteEditor.cs  NoteManager.cs  NoteRenameDialog.cs  NoteTag.cs  NoteWindow.cs  PlatformFactory.cs  PluginManager.cs  PreferenceTabAddin.cs  Preferences.cs  PreferencesClient.cs  (+31 more)
Tomboy/Addins/: Makefile.am
Tomboy/GConf.PropertyEditors/: PropertyEditor.cs  PropertyEditorBool.cs  PropertyEditorEntry.cs  PropertyEditorToggleButton.cs
Tomboy/Gnome.Keyring/: AccessRights.cs  AttributeType.cs  GenericItemData.cs  ItemACL.cs  ItemData.cs  ItemType.cs  KeyringException.cs  KeyringInfo.cs  NetItemData.cs  NoteItemData.cs  Operation.cs  RequestMessage.cs  ResponseMessage.cs  ResultCode.cs  Ring.cs  sync-tree.sh
Tomboy/Hyena/: XdgBaseDirectorySpec.cs
Tomboy/Notebooks/: CreateNotebookDialog.cs  Notebook.cs  NotebookApplicationAddin.cs  NotebookManager.cs  NotebookMenuItem.cs  NotebookNewNoteMenuItem.cs  NotebookNoteAddin.cs  NotebookPreferenceTabAddin.cs  NotebooksTreeView.cs
Tomboy/Plugins/: .cvsignore  Backlinks.cs  Bugzilla.cs  CellRendererDate.cs  DateButton.cs  DateTimeChooser.cs  DateTimeChooserDialog.cs  Evolution.cs  ExportToHTML.cs  ExportToHTML.xsl  FixedWidth.cs  GalagoPresence.cs  GaryPlugin.cs  Makefile.am  NoteOfTheDay.cs  PrintNotes.cs  StickyNoteImport.cs  Task.cs  TaskArchiver.cs  TaskData.cs  TaskListWindow.cs  TaskManager.cs  TaskOptionsDialog.cs  TaskTag.cs  TasksPlugin.cs  TasksUIManagerLayout.xml
Tomboy/Synchronization/: FileSystemSyncServer.cs  FuseSyncServiceAddin.cs  ISyncUI.cs  SilentUI.cs  SyncDialog.cs  SyncManager.cs  SyncServiceAddin.cs  SyncUtils.cs  TomboySyncClient.cs
Tomboy/System.Web/: HttpUtility.cs
Tomboy/dbus-sharp/: Arguments.cs  Array.cs  Boolean.cs  Bus.cs  BusDriver.cs  Byte.cs  Connection.cs  DBusException.cs  Double.cs  Error.cs  ErrorMessage.cs  Handler.cs  IDBusType.cs  Int16.cs  Int32.cs  Int64.cs  InterfaceAttribute.cs  InterfaceProxy.cs  Introspector.cs  Message.cs  MethodAttribute.cs  MethodCall.cs  MethodReturn.cs  ObjectPath.cs  ProxyBuilder.cs  Server.cs  Service.cs  Signal.cs  SignalAttribute.cs  String.cs  UInt16.cs  UInt32.cs  UInt64.cs
Tomboy/gtk-sharp-beans/: Global.cs  ImageMenuItem.cs
Tomboy/panelapplet/: AppletFactory.cs  BonoboUIVerb.cs  ChangeBackgroundHandler.cs  ChangeSizeHandler.cs  GnomeSharp.PanelAppletFactoryCallbackNative.cs  MoveFocusOutOfAppletHandler.cs  ObjectManager.cs  PanelApplet.cs  PanelAppletBackgroundType.cs  PanelAppletFactory.cs  PanelAppletFactoryCallback.cs  PanelAppletFlags.cs
TrayIcon/: .cvsignore  Egg.metadata  Makefile.am  libtrayicon-sources.xml
TrayIcon/libtrayicon/: Makefile.am  tomboykeybinder.c  tomboykeybinder.h
data/: .cvsignore  DefaultPlugins.desktop.in.in  GNOME_TomboyApplet.server.in.in  GNOME_TomboyApplet.xml  Makefile.am  Start_Here.note  UIManagerLayout.xml  com.beatniksoftware.Tomboy.service.in  index.theme  org.gnome.Tomboy.service.in  org.gnome.tomboy.gschema.xml.in  tomboy-addins.pc.in  tomboy-note-clipboard-html.xsl  tomboy-plugins.pc  tomboy-plugins.pc.in  tomboy.1  tomboy.desktop.in  tomboy.schemas.in  tomboy.xml
data/icons/: Makefile.am  hicolor_actions_22x22_filter-note-all.xcf.bz2  hicolor_places_16x16_note.xcf.bz2
data/images/: .cvsignore  Makefile.am
gtkspell/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure.in
gtkspell/gtkspell/: Makefile.am  deprecated.c  gtkspell.c  gtkspell.h
gtkspell/po/: ChangeLog  POTFILES.in  be.po  de.po  eo.po  eu.po  fr.po  ga.po  mn.po  pl.po  pt_BR.po  ro.po  sk.po  sr.po  wa.po
help/: ChangeLog  Makefile.am  tomboy.omf.in
help/C/: Makefile.am  TODO  addins-desktop-bugzilla.page  addins-desktop-printing.page  addins-desktop.page  addins-formatting-fixed-width.page  addins-formatting-underline.page  addins-formatting.page  addins-preferences.page  addins-sync-local.page  addins-sync-ssh.page  addins-sync-webdav.page  addins-sync-webservice.page  addins-sync.page  addins-tools-backlinks.page  addins-tools-html-export.page  addins-tools-note-of-day.page  addins-tools-timestamp.page  addins-tools.page  addins.page  advanced.page  advanced.page.stub  create-note.page  create-notebook.page  delete-notes.page  edit-note.page  hotkeys.page  index.page  introduction.page  note-edit-prefs.page  pin-notes.page  prefs.page  problems.page  problems.page.stub  search.page  sync-setup.page  sync.page  tomboy-C.omf  tomboy.xml  whatsnew.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
libtomboy/: Makefile.am  contrast.c  contrast.h  eggaccelerators.c  eggaccelerators.h  eggtrayicon.c  gedit-print.c  gtksourceprintjob.c  tomboykeybinder.c  tomboykeybinder.h  tomboyutil.c  tomboyutil.h
test/: .cvsignore  DBusClientTest.py  DBusSearchTest.py  DummyNote.cs  LoggerTest.cs  Makefile.am  NoteManagerTest.cs  NoteTest.cs  create_note_stress_tester.py
trunk/: .cvsignore  AUTHORS  Makefile.am  README  autogen.sh  configure.in  tomboy.spec.in
(+431 files in other folders)
